--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-beta.0",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "miragejs": "^0.1.43",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   }
