--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.32.0",
+    "axios": "^0.26.1",
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
+    "@types/axios": "^0.14.0",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
